--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,8 @@ html.md {
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+/* Custom styles */
+
+@import "./theme/forms.scss";
+@import "./theme/content.scss";
