--- a/src/theme/forms.scss
+++ b/src/theme/forms.scss
@@ -2,25 +2,39 @@
   width: 100%;
   max-width: 500px;
   height: auto;
-  margin: 50px auto;
+  margin: 30px auto;
   padding: 20px;
   border-radius: 10px;
-  & > ion-item {
-    margin-bottom: 15px;
-    --color: #fff;
-    --background: rgba(255, 255, 255, 0.2);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
-  }
 
-  & > ion-label {
-    --color: #fff;
-  }
+  .container-input--item {
+    height: 80px;
+    width: 100%;
 
-  & > small {
-    font-size: 1rem;
-    line-height: 1.2rem;
-    color: var(--ion-color-danger-shade);
-    transition: all 0.2s;
+    & > ion-item {
+      margin: 10px 0;
+      --color: #fff;
+      --background: rgba(255, 255, 255, 0.2);
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+      border-radius: 5px;
+    }
+
+    & > ion-label {
+      --color: #fff;
+      font-size: 1.6rem;
+    }
+
+    & > ion-checkbox {
+      margin-right: 10px !important;
+    }
+
+    & > small {
+      font-size: 1.2rem;
+      line-height: 1.4rem;
+      color: var(--ion-color-danger-shade);
+      transform: translateX(10px) !important;
+    }
   }
+}
+.container-input--item:last-of-type {
+  margin-top: 15px;
 }
