--- a/src/app/user/pages/login/login.page.scss
+++ b/src/app/user/pages/login/login.page.scss
@@ -3,8 +3,8 @@
   width: 100%;
   height: 100%;
   padding: 50px;
-  --background: rgba(0, 0, 0, 0.8);
-  --color: #fff;
+  --background: rgba(255, 255, 255, 0.8);
+  --color: #000;
 
   img {
     width: 80px;
