--- a/src/app/user/pages/signup/signup.page.scss
+++ b/src/app/user/pages/signup/signup.page.scss
@@ -3,8 +3,8 @@
   width: 100%;
   height: 100%;
   padding: 50px;
-  --background: rgba(0, 0, 0, 0.8);
-  --color: #fff;
+  --background: rgba(255, 255, 255, 0.8);
+  --color: #000;
 
   img {
     width: 80px;
@@ -24,7 +24,7 @@
 }
 
 ion-toolbar {
-  --background: rgba(0, 0, 0, 0.8);
+  --background: rgba(255, 255, 255, 0.8);
   --border-style: none !important;
 }
 
@@ -33,4 +33,10 @@ ion-button {
   width: 90%;
   margin: 30px auto;
   --background: var(--ion-color-danger);
+}
+
+ion-header {
+  &:after {
+    background: none !important;
+  }
 }
