--- a/src/theme/forms.scss
+++ b/src/theme/forms.scss
@@ -12,14 +12,14 @@
 
     & > ion-item {
       margin: 10px 0;
-      --color: #fff;
+      --color: #000;
       --background: rgba(255, 255, 255, 0.2);
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
       border-radius: 5px;
     }
 
     & > ion-label {
-      --color: #fff;
+      --color: #000;
       font-size: 1.6rem;
     }
 
