--- a/src/app/songs-modal/songs-modal.page.html
+++ b/src/app/songs-modal/songs-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-padding">
   <ion-toolbar>
-    <ion-title>{{this.artist_name}} - Top Tracks</ion-title>
+    <ion-title>{{this.element_name }} - Top Tracks</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="selectSong()"> cerrar </ion-button>
     </ion-buttons>
