--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,6 +11,7 @@ ion-avatar {
     width: 64px;
     height: 64px;
     object-fit: cover;
+    margin: 0 10px;
   }
   span {
     font-size: 1.2rem;
@@ -23,4 +24,9 @@ ion-footer {
   background: #fff;
   opacity: 1;
   max-height: 350px;
+
+  ion-icon,
+  .song-name {
+    font-size: 1.4rem;
+  }
 }
