add pwa elements configure pwa actions for window in main.ts settings page created takephoto func added some bugs fixed

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -51,7 +51,7 @@
     <ion-row class="ion-padding">
       <ion-col class="ion-text-start">{{newTime | timeDuration }}</ion-col>
       <ion-col class="ion-text-end"
-        >{{currentTrack.duration | timeDuration }}</ion-col
+        >{{currentTrack?.duration | timeDuration }}</ion-col
       >
     </ion-row>
   </ion-grid>
